--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "motion": "^12.23.12",
     "next": "15.3.4",
     "payload": "^3.49.1",
+    "qs-esm": "^7.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.61.1",
