--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@stripe/stripe-js": "^7.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide": "^0.526.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.12",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20.19.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
