Add .next and node modules to dockerignore

--- a/cms/Dockerfile
+++ b/cms/Dockerfile
@@ -5,37 +5,33 @@ FROM node:22.12.0-slim AS base
 FROM base AS builder
 WORKDIR /app
 
-# Optional native dependency (only add if absolutely necessary)
+# Install libc6 (optional, but kept for your use case)
 RUN apt-get update && apt-get install -y libc6 
 
-# Install dependencies
-COPY package.json package-lock.json ./
-RUN npm install --omit=dev
-
-# Copy application code
+# Copy entire app source
 COPY . .
 
-# Build Payload app
+# Install dependencies (next is in dependencies, so --omit=dev is now safe)
+RUN npm install --omit=dev
+
+# Build Payload + Next.js app
 RUN npm run build
 
-# Runner stage
+# Runtime stage
 FROM base AS runner
 WORKDIR /app
 
 ENV NODE_ENV=production
-
-# Copy built app and dependencies from builder
-COPY --from=builder /app/.next ./
-COPY --from=builder /app/node_modules ./
-COPY --from=builder /app/package.json ./
-
-# Set non-root user only if it's explicitly created or available
-# Otherwise default to root
-# USER node
-
-# Expose Payload default port
-EXPOSE 3000
 ENV PORT=3000
 
-# Start the application
-CMD ["npm", "run", "start"]
+# Copy only what's needed from builder
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/package.json ./package.json
+COPY --from=builder /app/next.config.js ./next.config.mjs
+
+# Expose Payload port
+EXPOSE 3000
+
+# Start the app using npm script
+CMD ["npm", "start"]
